# HevyAI

./: .env  .env.example  .gitignore  Dockerfile  PLANNING.md  README.md  TASK.md  docker-compose.yml  manage.py  pyproject.toml
docs/: CONTRIBUTING.md  PLANNING.md  TASK.md
frontend/: .env  Dockerfile  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/pages/: Dashboard.tsx  WorkoutList.tsx
hevyai/: asgi.py  settings.py  urls.py  wsgi.py
hevyai/application/dtos/: exercise_template_dto.py  routine_dto.py  workout_dto.py
hevyai/application/use_cases/: exercise_template_use_cases.py  routine_use_cases.py  workout_use_cases.py
hevyai/core/: apps.py  models.py  views.py
hevyai/domain/entities/: exercise_template.py  routine.py  workout.py
hevyai/domain/repositories/: exercise_template_repository.py  routine_repository.py  workout_repository.py
hevyai/infrastructure/api/clients/: hevy_client.py
hevyai/infrastructure/repositories/: hevy_exercise_template_repository.py  hevy_routine_repository.py  hevy_workout_repository.py
hevyai/presentation/rest/: urls.py
hevyai/presentation/rest/serializers/: exercise_template_serializers.py  routine_serializers.py  workout_serializers.py
hevyai/presentation/rest/viewsets/: exercise_template_viewsets.py  routine_viewsets.py  workout_viewsets.py
